<resources>
    <string name="app_name">Film Schedule</string>
    <string name="au_email_text">Email</string>
    <string name="au_password_text">Password</string>
    <string name="au_signup_text">Sign Up</string>
    <string name="au_login_text">Sign in</string>
    <string name="pr_settings_btn_text">Settings</string>
    <string name="pr_notifications_btn_text">Notifications</string>
    <string name="pr_descriptionandsupport_btn_text">Description and support</string>
    <string name="authorization_input_error">Information input error</string>
    <string name="reg_email_text">Email</string>
    <string name="reg_login_text">Login</string>
    <string name="reg_password_text">Password</string>
    <string name="reg_password_again_text">Password again</string>
    <string name="reg_email_input_error">Email is incorrect</string>
    <string name="reg_password_input_error">Password must contain at least one symbol</string>
    <string name="reg_password_again_input_error">Passwords must be equal</string>
    <string name="se_change_password_text">Change Password</string>
    <string name="se_change_email_text">Change Email</string>
    <string name="se_change_login_text">Change Login</string>
    <string name="se_heading_text">Settings</string>
    <string name="profile">Profile</string>
    <string name="chosen">Chosen</string>
    <string name="about_us">About Us</string>
    <string name="api_update">update</string>
    <string name="search">Search</string>
    <string name="empty_search">Fill in the search bar, please</string>
    <string name="calendar">Calendar</string>
    <string name="api">API</string>
    <string name="add_to_chosen">Add To Chosen</string>
    <string name="film_schedule">Film Schedule</string>
    <string name="add_error">HUUUUI</string>
    <string name="delete_from_chosen">Delete</string>
    <string name="schedule_watching">Add to Schedule</string>
    <string name="films_recv_title">title</string>
    <string name="films_recv_overview">overview</string>
    <string name="error">Error</string>
    <string name="cast">Cast</string>
    <string name="production_companies">Production Companies</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="internet_connection">Please, check your Internet-connection</string>
</resources>
