<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/se_heading_text"/>

    <Button
        android:id="@+id/se_change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_change_email_text"/>

    <Button
        android:id="@+id/se_change_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_change_login_text"/>

    <Button
        android:id="@+id/se_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_change_password_text"/>

</LinearLayout>