<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pr_photo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="#900" />

    <LinearLayout
        android:id="@+id/pr_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/pr_photo"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/au_email_text" />

        <TextView
            android:id="@+id/pr_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_login_text" />

        <TextView
            android:id="@+id/pr_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/au_password_text"/>

        <TextView
            android:id="@+id/pr_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pr_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/pr_photo">

        <Button
            android:id="@+id/pr_settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pr_settings_btn_text"/>

        <Button
            android:id="@+id/pr_notifications_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pr_notifications_btn_text"/>

        <Button
            android:id="@+id/pr_descriptionandsupport_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pr_descriptionandsupport_btn_text"/>


    </LinearLayout>

</RelativeLayout>