<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:text="@string/profile"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_account_circle_white_24dp"/>

    <Button
        android:id="@+id/button2"
        android:text="@string/chosen"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_favorite_white_24dp"/>

    <Button
        android:id="@+id/button3"
        android:text="@string/about_us"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_info_white_24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/search"
        android:hint="@string/search"
        android:visibility="gone"
        android:inputType="textAutoCorrect"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_search_white_24dp"
            android:layout_margin="16dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>