<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="monospace"
        android:textSize="35sp"
        android:text="@string/error"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/original_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/budget"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"/>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/progress"
        android:indeterminateOnly="true"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/cast"
            android:text="@string/cast"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/actors" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/company"
            android:text="@string/production_companies"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/companies" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_margin="16dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
</ScrollView>